<resources>
    <string name="app_name">FinAK</string>
    <string name="InMovimi">Movimiento</string>
    <string name="Movimientos">Movimientos</string>
    <string name="TipMovimi">Tipo de moviemiento:</string>
    <string name="mes">Meses</string>
    <string name="fijo">Fijo</string>
    <string name="Ins">Insertar</string>
    <string name="InsNew">Insertar Nuevo</string>
    <string name="Años">Años</string>
    <string name="Cantidad">Cantidad</string>
    <string name="Editar">Editar</string>
    <string name="Borrar">Borrar</string>
    <string name="Ingreso">Ingresos</string>
    <string name="Gasto">Gastos</string>
    <string name="Calcular">Calcular</string>



    <string-array name="ListMovimi">
        <item>Ingreso</item>
        <item>Gasto</item>
    </string-array>
</resources>